@@ -37,6 +37,10 @@ if test $enable_linux_futex = yes; then
 	config_path="linux/powerpc linux posix"
 	;;
 
+    s390*-*-linux*)
+	config_path="linux/s390 linux posix"
+	;;
+
     # Note that bare i386 is not included here.  We need cmpxchg.
     i[456]86-*-linux*)
 	config_path="linux/x86 linux posix"
